@@ -1,2 +1,4 @@
+.. _appendix.release:
+
 .. include:: ../../../release_notes.txt
 
