@@ -4,11 +4,11 @@ Appendix
 .. toctree::
     :maxdepth: 1
 
+    appendix.release
     appendix.conventions
     appendix.risks
     tests/index
     appendix.license
     appendix.biblio
     courses/index
-    appendix.release
-    
+
