@@ -2,35 +2,35 @@
 {% set title = 'VACUMM' %}
 
 {% block body %}
- 
+
     <h1>VACUMM</h1>
-    
-    <p><b>Version:</b> {{release}}</p> 
+
+    <p><b>Version:</b> {{release}}</p>
 
     <blockquote>
         <p><i>"Validation, Analysis, Comparison - Utilities written in Python to validate and analyze
         Multi-Model outputs, and compare them to observations."</i></p>
-    
+
         <p>-- Quote translated from the <a href="https://forge.ifremer.fr/projects/vacumm">forge page</a> of the project</p>
     </blockquote>
-    
+
     <p>
         VACUMM provides generic and specialized tools for the validation of ocean models, and more especially
         the MARS model from IFREMER.
         The heart of VACUMM is a <a href="{{ pathto('library/index') }}">library</a> written mainly
-        in the <a href="http://www.python.org">Python</a> language, 
-        whose <a href="{{ pathto('library/misc') }}">core</a> can be used for the <b>preprocessing</b> and the 
+        in the <a href="http://www.python.org">Python</a> language,
+        whose <a href="{{ pathto('library/misc') }}">core</a> can be used for the <b>preprocessing</b> and the
         <b>postprocessing</b> of oceanic and atmospheric data coming from models or observations.
-        The library for instance also has specialized modules for managing outputs from 
+        The library for instance also has specialized modules for managing outputs from
         <a href="{{ pathto('library/data/model') }}">models</a> and making advanced
         <a href="{{ pathto('library/diag') }}">diagnostics</a>.
     </p>
-    
+
     <h1>Features</h1>
 
     <ul>
-    
-        <li> A huge documentation with a gallery, a lot of examples and the complete API: <a href='http://www.ifremer.fr/vacumm'>http://www.ifremer.fr/vacumm</a></li> 
+
+        <li> A huge documentation with a gallery, a lot of examples and the complete API: <a href='http://www.ifremer.fr/vacumm'>http://www.ifremer.fr/vacumm</a></li>
         <li> Full UV-CDAT support and extensions.</li>
         <li> Matplotlib graphics with advanced plotting objects like geographical mapping tools.</li>
         <li> Numerous utilities for manipulating and converting time data.</li>
@@ -50,22 +50,27 @@
         <li> A collection of scripts for some diagnostics.</li>
 
     </ul>
-    
+
     <h1>Download</h1>
 
-    To download VACUMM, please go to this 
+    To download VACUMM, please go to this
     <a href="{{ pathto('user.install.download') }}">page</a>.
+
+    <h1>Release notes</h1>
+
+    Release notes for each version are available on this
+    <a href="{{ pathto('appendix.release') }}">page</a>.
 
     <h1>Documentation</h1>
 
-    The documentation is available <a href="{{ pathto('contents') }}">here</a>, 
+    The documentation is available <a href="{{ pathto('contents') }}">here</a>,
     with in particular
     its <a href="{{ pathto('user') }}">user guide</a> and
     its <a href="{{ pathto('library/index') }}">library</a>.
 
     <h1>License</h1>
 
-    VACUMM is under the <a href="{{ pathto('appendix.license') }}">CeCiLL</a> license, 
+    VACUMM is under the <a href="{{ pathto('appendix.license') }}">CeCiLL</a> license,
     which is compatible with well knwon GPL license.
 
     <h1>Translation</h1>
@@ -73,9 +78,9 @@
     The documentation is currently being translated.
     Parts may be in english, in french or in both languages.
     <b>If you want to contribute to the translation, you are welcome!</b>
-    
+
     <h1>CAPARMOR users!</h1>
-    
+
     If you have an access to the CAPARMOR supercomputer at IFREMER,
     you can quickly try VACUMM from the shel:
     <div class="highlight-bash"><div class="highlight"><pre>
@@ -84,9 +89,9 @@
 <span class="gp">$</span> module load uvcdat121
 <span class="gp">$</span> python
 </pre></div></div>
-        
+
     Then:
-        
+
     <div class="highlight-python"><div class="highlight"><pre>
 <span class="gp">&gt;&gt;&gt;</span> <span class="kn">import</span> <span class="nn">vacumm</span>
 </pre></div></div>
@@ -97,5 +102,5 @@
 <span class="gp">&gt;&gt;&gt;</span> sst = DS(data_sample(<span class="s">&#39;mars3d.xy.nc&#39;</span>), <span class="s">&#39;mars&#39;</span>).get_sst()
 <span class="gp">&gt;&gt;&gt;</span> map2(sst)
 </pre></div></div>
-    
+
 {% endblock %}
